# ArdusRpa

prac/google-form-rpa-agent/: .env  README.md  basic_info.json  config.json  main.py  requirements.txt
prac/google-form-rpa-agent/prompts/: mapping_prompt.md
prac/google-form-rpa-agent/rpa/: browser_filler.py  form_parser_gemini.py  types.py
prac/normalforms/: README.md  config.json  data.json  env.example  inspect_form.py  pyproject.toml
prac/normalforms/form_filler/: __init__.py  airtable.py  filler.py
prac/normalforms/output/: run_log.csv
prac/onegoogform/: main.py  test_submissions.csv
prac/sallie_form/: README.md  config.json  data.json  final_form_filler.py  pyproject.toml
prac/sallie_form/form_filler/: __main__.py  utils.py
